# AR-U-Here

./: README.md  package-lock.json  package.json
Api/: .eslintrc  .gitignore  jest.config.json  package-lock.json  package.json  tsconfig.json  tslint.json
Api/src/: app.ts
Api/src/addons/: CMakeLists.txt
Api/src/addons/src/: ManagerAddons.cpp
App/: .gitignore  pubspec.yaml
App/lib/: Home.dart  animation.dart  api.dart  didactiel1.dart  didactiel2.dart  didactiel3.dart  forgot_password.dart  login.dart  main.dart  myapp.dart  welcome_page.dart
App/test/: widget_test.dart
App/web/: index.html
Cahier des charges/: UserStory.xlsx
Database/: Model_ArUHere.mwb  Model_ArUHere.mwb.bak  Model_AreUHere.mwb  Model_AreUHere.mwb.bak  generate-database.sql
Documentation/: mkdocs.yml
Documentation/docs/: index.md
Embarqué/: .gitignore  CMakeLists.txt  platformio.ini
Embarqué/borne/: ArduinoScheme.fzz  DocArduinoSchémaElectrique.txt
Embarqué/include/: brigadier.hpp  config.hpp  recognition.hpp  remote.hpp
Embarqué/schema/: .$Diagramme de class.bkp  .$Diagramme de class.drawio.bkp  .$Diagramme de class.dtmp  Diagramme de class.drawio
Embarqué/src/: brigadier.cpp  main.cpp
figma/: figma_link.txt
flutter_application_1/: .flutter-plugins  .flutter-plugins-dependencies  .packages  pubspec.yaml
flutter_application_1/.dart_tool/: package_config.json  package_config_subset
flutter_application_1/lib/: animation.dart  main.dart  (+2 more)
landing-page/: README.md  index.html  package-lock.json  package.json  styles.css
public/: index.html
src/: App.css  App.js
(+282 files in other folders)
